# src/main/java/com/dogoo/miniblogs/entity/CategoryEntity.java
@@ -1,45 +1,0 @@
-package com.dogoo.miniblogs.entity;
-
-import org.springframework.data.annotation.Id;
-import org.springframework.data.mongodb.core.mapping.Document;
-
-@Document(collection = "categories")
-public class CategoryEntity {
-    @Id
-    private String id;
-    private String name;
-    private String description;
-
-    public CategoryEntity() {
-    }
-
-    public CategoryEntity(String id, String name, String description) {
-        this.id = id;
-        this.name = name;
-        this.description = description;
-    }
-
-    public String getId() {
-        return id;
-    }
-
-    public void setId(String id) {
-        this.id = id;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public String getDescription() {
-        return description;
-    }
-
-    public void setDescription(String description) {
-        this.description = description;
-    }
-}
