# src/main/resources/swagger/filegen.yaml
@@ -12,10 +12,6 @@ servers:
 tags:
   - name: "blogs"
     description: "Blogs operations"
-  - name: "categories"
-    description: "Categories operations"
-  - name: "authors"
-    description: "Authors operations"
   - name: "contact"
     description: "Contact from user"
 
@@ -230,308 +226,6 @@ paths:
             $ref: '#/components/responses/NotFound'
           '500':
             $ref: '#/components/responses/InternalServerError'
-
-  /categories:
-    get:
-      summary: "Get all categories"
-      operationId: "getAllCategories"
-      tags:
-        - "categories"
-      responses:
-        '200':
-          $ref: '#/components/responses/Categories'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-    post:
-      summary: "Create a category"
-      operationId: "createCategory"
-      tags:
-        - "categories"
-      requestBody:
-        description: "Category to create"
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Category"
-      responses:
-        '200':
-          $ref: '#/components/responses/Category'
-        '201':
-          $ref: '#/components/responses/Category'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-
-  /categories/{id}:
-    put:
-        summary: "Update a category"
-        operationId: "updateCategory"
-        tags:
-            - "categories"
-        parameters:
-            - name: "id"
-              in: "path"
-              description: "Category id"
-              required: true
-              schema:
-                type: string
-        requestBody:
-            description: "Category to update"
-            required: true
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Category"
-        responses:
-          '200':
-            $ref: '#/components/responses/Category'
-          '201':
-            $ref: '#/components/responses/Category'
-          '400':
-            $ref: '#/components/responses/BadRequest'
-          '401':
-            $ref: '#/components/responses/Unauthorized'
-          '403':
-            $ref: '#/components/responses/Forbidden'
-          '404':
-            $ref: '#/components/responses/NotFound'
-          '500':
-            $ref: '#/components/responses/InternalServerError'
-    delete:
-        summary: "Delete a category"
-        operationId: "deleteCategory"
-        tags:
-            - "categories"
-        parameters:
-            - name: "id"
-              in: "path"
-              description: "Category id"
-              required: true
-              schema:
-                type: string
-        responses:
-          '200':
-            $ref: '#/components/responses/Category'
-          '201':
-            $ref: '#/components/responses/Category'
-          '400':
-            $ref: '#/components/responses/BadRequest'
-          '401':
-            $ref: '#/components/responses/Unauthorized'
-          '403':
-            $ref: '#/components/responses/Forbidden'
-          '404':
-            $ref: '#/components/responses/NotFound'
-          '500':
-            $ref: '#/components/responses/InternalServerError'
-
-  /categories/{id}/blogs:
-    get:
-      summary: "Get all blogs by category id"
-      operationId: "getAllBlogsByCategoryId"
-      tags:
-        - "blogs"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "Category id"
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          $ref: '#/components/responses/Blogs'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-
-  /authors:
-    get:
-      summary: "Get all authors"
-      operationId: "getAllAuthors"
-      tags:
-        - "authors"
-      responses:
-        '200':
-          $ref: '#/components/responses/Authors'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-    post:
-        summary: "Create an author"
-        operationId: "createAuthor"
-        tags:
-            - "authors"
-        requestBody:
-            description: "Author to create"
-            required: true
-            content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Author"
-        responses:
-          '200':
-            $ref: '#/components/responses/Author'
-          '201':
-            $ref: '#/components/responses/Author'
-          '400':
-            $ref: '#/components/responses/BadRequest'
-          '401':
-            $ref: '#/components/responses/Unauthorized'
-          '403':
-            $ref: '#/components/responses/Forbidden'
-          '404':
-            $ref: '#/components/responses/NotFound'
-          '500':
-            $ref: '#/components/responses/InternalServerError'
-
-  /authors/{id}:
-    get:
-        summary: "Get an author by id"
-        operationId: "getAuthorById"
-        tags:
-            - "authors"
-        parameters:
-            - name: "id"
-              in: "path"
-              description: "Author id"
-              required: true
-              schema:
-                type: string
-        responses:
-          '200':
-            $ref: '#/components/responses/Author'
-          '201':
-            $ref: '#/components/responses/Author'
-          '400':
-            $ref: '#/components/responses/BadRequest'
-          '401':
-            $ref: '#/components/responses/Unauthorized'
-          '403':
-            $ref: '#/components/responses/Forbidden'
-          '404':
-            $ref: '#/components/responses/NotFound'
-          '500':
-            $ref: '#/components/responses/InternalServerError'
-    put:
-        summary: "Update an author"
-        operationId: "updateAuthor"
-        tags:
-            - "authors"
-        parameters:
-            - name: "id"
-              in: "path"
-              description: "Author id"
-              required: true
-              schema:
-                type: string
-        requestBody:
-            description: "Author to update"
-            required: true
-            content:
-                application/json:
-                  schema:
-                    $ref: "#/components/schemas/Author"
-        responses:
-          '200':
-            $ref: '#/components/responses/Author'
-          '201':
-            $ref: '#/components/responses/Author'
-          '400':
-            $ref: '#/components/responses/BadRequest'
-          '401':
-            $ref: '#/components/responses/Unauthorized'
-          '403':
-            $ref: '#/components/responses/Forbidden'
-          '404':
-            $ref: '#/components/responses/NotFound'
-          '500':
-            $ref: '#/components/responses/InternalServerError'
-    delete:
-        summary: "Delete an author"
-        operationId: "deleteAuthor"
-        tags:
-            - "authors"
-        parameters:
-            - name: "id"
-              in: "path"
-              description: "Author id"
-              required: true
-              schema:
-                type: string
-        responses:
-          '200':
-            $ref: '#/components/responses/Author'
-          '201':
-            $ref: '#/components/responses/Author'
-          '400':
-            $ref: '#/components/responses/BadRequest'
-          '401':
-            $ref: '#/components/responses/Unauthorized'
-          '403':
-            $ref: '#/components/responses/Forbidden'
-          '404':
-            $ref: '#/components/responses/NotFound'
-          '500':
-            $ref: '#/components/responses/InternalServerError'
-
-  /authors/{id}/blogs:
-    get:
-      summary: "Get all blogs by author id"
-      operationId: "getAllBlogsByAuthorId"
-      tags:
-        - "authors"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "Author id"
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          $ref: '#/components/responses/Blogs'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-
   /contact:
     get:
         summary: "Get contact info"
@@ -624,10 +318,10 @@ components:
                   type: string
                   minLength: 20
                   example: '65320297d344e36796822b5e'
-              authorId:
+              author:
                 type: string
                 minLength: 20
-                example: '65320297d344e36796822b5e'
+                example: 'Lolia'
               createDate:
                 type: string
                 example: '2020-01-01T00:00:00.000Z'
@@ -662,64 +356,12 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Contact'
-        Category:
-          type: object
-          required:
-            - id
-            - name
-            - description
-          properties:
-            id:
-              type: string
-              minLength: 20
-              example: '65320297d344e36796822b5e'
-            name:
-              type: string
-              minLength: 10
-              example: 'Sports'
-            description:
-              type: string
-              example: 'Sports category'
-        Categories:
-          type: array
-          items:
-            $ref: '#/components/schemas/Category'
-
-        Author:
-          type: object
-          required:
-              - id
-              - name
-              - email
-          properties:
-              id:
-                type: string
-                minLength: 20
-                example: '65320297d344e36796822b5e'
-              name:
-                type: string
-                minLength: 10
-                example: 'My name'
-              email:
-                type: string
-                format: email
-                example: 'user@gmail.com'
-              bio:
-                type: string
-                example: 'My bio'
-              avatar:
-                type: string
-                example: 'https://www.google.com'
-        Authors:
-            type: array
-            items:
-                $ref: '#/components/schemas/Author'
         BlogReq:
           type: object
           required:
             - title
             - content
-            - authorId
+            - author
             - categoryIds
           properties:
             title:
@@ -749,24 +391,23 @@ components:
                   detail:
                     type: string
                     example: 'part 1 detail'
-            authorId:
+            author:
               type: string
               minLength: 20
-              example: '65320297d344e36796822b5e'
+              example: 'Lolia'
             categories:
               type: array
               items:
                 type: string
                 minLength: 20
                 example: '65320297d344e36796822b5e'
-
         BlogApproveReq:
           type: object
           required:
             - id
             - blogId
             - approved
-            - authorId
+            - author
           properties:
             id:
               type: string
@@ -779,10 +420,10 @@ components:
               type: string
               minLength: 20
               example: '65320297d344e36796822b5e'
-            authorId:
+            author:
               type: string
               minLength: 20
-              example: '65320297d344e36796822b5e'
+              example: 'Lolia'
         Error:
           type: object
           required:
@@ -821,30 +462,6 @@ components:
           application/json:
             schema:
               $ref: "#/components/schemas/Contacts"
-      Category:
-        description: "Category"
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Category"
-      Categories:
-        description: "Categories"
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Categories"
-      Author:
-        description: "Author"
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Author"
-      Authors:
-        description: "Authors"
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Authors"
       Error:
         description: "Error"
         content:
